--- a/src/css/index.css
+++ b/src/css/index.css
@@ -198,7 +198,7 @@ body {
 #reg {
   height: 50px;
   text-align: center;
-  width: 250px;
+  width: 200px;
   cursor: pointer;
   position: relative;
   bottom: 10px; }
@@ -241,12 +241,14 @@ body {
 #reg1 {
   height: 50px;
   text-align: center;
-  width: 250px;
+  width: 200px;
   cursor: pointer;
   position: relative;
   bottom: 15px; }
 
 .btn1 {
+  display: flex;
+  justify-content: center;
   transition: all 0.3s;
   position: relative;
   display: flex;
