--- a/src/css/index.css
+++ b/src/css/index.css
@@ -334,4 +334,42 @@ body {
     stroke-dashoffset: 48;
     transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1); }
 
+.horizontal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 150px;
+  height: 60px;
+  margin: 20px;
+  border: 5px solid white;
+  font-size: 1rem;
+  cursor: pointer; }
+  .horizontal > .text {
+    position: relative;
+    color: transparent;
+    background-image: linear-gradient(90deg, #4299E1 0%, #90cdf4 50%, white 50%, white 100%);
+    background-repeat: repeat;
+    background-size: 200%;
+    background-position: 100% 0;
+    -webkit-background-clip: text;
+    background-clip: text;
+    transition: background-position 300ms; }
+  .horizontal::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    transform-origin: 100% 0;
+    transform: scale3d(0, 1, 1);
+    transition: transform 300ms; }
+  .horizontal:hover .text {
+    background-position: 0 0; }
+  .horizontal:hover::before {
+    transform-origin: 0 0;
+    transform: scale3d(1, 1, 1); }
+
 /*# sourceMappingURL=index.css.map */
